Optimize tabledisplay, Add customize student status functionality

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,8 +26,10 @@
       {
         "singleQuote": true,
         "semi": false,
-        "trailingComma": "none"
+        "trailingComma": "none",
+        "endOfLine": "auto"
       }
-    ]
+    ],
+    "quotes": [2, "single", "avoid-escape"]
   }
 }
