--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "classnames": "^2.3.1",
+    "history": "4.10.1",
     "jquery": "^3.6.0",
     "mdbreact": "^5.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-image-file-resizer": "^0.4.4",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-search-input": "^0.11.3",
     "reactotron-react-js": "^3.3.7",
     "reactotron-redux": "^3.1.3",
